# P2-SoporteCliente

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  sample_queries.py
Data/: faq_document.txt  questions.json
Output/: sample_queries.json
src/: build_index.py  logger.py  query.py
